--- a/src/main/resources/static/View/cpgl/Cost.html
+++ b/src/main/resources/static/View/cpgl/Cost.html
@@ -113,6 +113,7 @@
         var parmsArray = [
             [
                 { name: 'used_by', value: $('#common_sheet_title').textbox('getValue'), op: 'cn' },
+                { name: 'cost_remark', value: $('#common_sheet_title').textbox('getValue'), op: 'cn' },
                 { name: 'sheet_no', value: $('#common_sheet_title').textbox('getValue'), op: 'cn' }
             ],
             { name: '_d_used_date', value: $('#begin_date').textbox('getValue'), op: 'ge' },
