--- a/src/main/resources/static/View/cpgl/In_Come_Detail.html
+++ b/src/main/resources/static/View/cpgl/In_Come_Detail.html
@@ -24,6 +24,12 @@
 				</td>
 			</tr>
 			<tr>
+				<td class="editTitle"><label data-locale="BATCH_NO"/></td>
+				<td class="editControl">
+					<input type="text" name="batch_no" id="batch_no" class="easyui-textbox"  readonly="readonly"/>
+				</td>
+			</tr>
+			<tr>
 				<td class="editTitle"><label data-locale="STATE"/></td>
 				<td class="editControl">
 					<input type="text" name="state" id="state" class="easyui-combobox"/>
