--- a/src/main/resources/static/View/cpgl/OpenRecord_List.html
+++ b/src/main/resources/static/View/cpgl/OpenRecord_List.html
@@ -384,7 +384,7 @@
             cellLayout: 0,
             scroll: false,
             autowidth: true,
-            sortname: 'open_date',
+            sortname: 'sheet_no',
             sortorder: 'desc',
             loadonce: false,
             mtype: 'POST',
