--- a/src/main/resources/static/View/cpgl/chunminhuiKanban.html
+++ b/src/main/resources/static/View/cpgl/chunminhuiKanban.html
@@ -205,7 +205,7 @@
 <div style="position:absolute;bottom:43%;;left:15px;height:50px;">
   <div style="border: 0px solid #e3e3e3;border-radius: 6px;padding: 6px 15px;background-color:rgba(255,255,255,0.1);">
    <div style="font-size: 12px;line-height: 24px;color: #ffffff;"><div style="width:12px;height:12px;float:left;background-color:#00a65a;border-radius:9px;margin-top:6px;margin-right:5px;"></div>今日销售额:<span id="today_sell" style="color: #ffffff;font-weight:bold;font-size:11px;">0</span></div>
-   <div style="font-size: 12px;line-height: 24px;color: #ffffff;"><div style="width:12px;height:12px;float:left;background-color:#ff851b;border-radius:9px;margin-top:6px;margin-right:5px;"></div>公账余额:<span id="public_account" style="color: #ffffff;font-weight:bold;font-size:11px;">0</span></div>
+   <div style="font-size: 12px;line-height: 24px;color: #ffffff;"><div style="width:12px;height:12px;float:left;background-color:#ff851b;border-radius:9px;margin-top:6px;margin-right:5px;"></div>交易总次数:<span id="public_account" style="color: #ffffff;font-weight:bold;font-size:11px;">0</span></div>
    <div style="font-size: 12px;line-height: 24px;color: #ffffff;"><div style="width:12px;height:12px;float:left;background-color:#d33724;border-radius:9px;margin-top:6px;margin-right:5px;"></div> 成本支出总额:<span id="total_cost" style="color: #ffffff;font-weight:bold;font-size:11px;">0</span></div>
   </div>
 </div>
@@ -220,7 +220,7 @@
 
 
 <div  style="float: left;margin:6px 25px;width:100%;height:50%; background: url(images/bg-01.png) 0% 0% / 100% 100% no-repeat;"><p class="example-title">销售时时滚动</p>
-<div id="main6" class="table-img" style="height:100%;width:100%;">
+<div id="main6" class="table-img" style="height:100%;width:100%;margin-top: 8px;">
 <!--<div class="slide-title">
             <span>姓名</span>
             <span>时间</span>
@@ -924,21 +924,36 @@ function loadGoodsType1 (goodsTypeList) {
 var loadGoodsType = function (goodsTypeList) {
     var typelist=[];
     var counts=[];
+    var sell_price_list=[];
     for(var i = 0; i < goodsTypeList.length; i++) {
         typelist.push(goodsTypeList[i].goods_type);
         counts.push(goodsTypeList[i].counts);
+        sell_price_list.push(goodsTypeList[i].sell_price);
     }
     var option = {
-        color: ['#dbb4b5'],
-        tooltip : {'trigger':'axis'},
+        color: ['#dbb121',"#db6a09"],
+        //tooltip : {'trigger':'axis'},
+        tooltip: {
+            trigger: 'axis',
+            axisPointer: {
+                type: 'cross',
+                crossStyle: {
+                    color: '#999'
+                }
+            }
+        },
         calculable : true,
-        grid : {'y2':100,left:"15%"},
+        //grid : {'y2':100,left:"15%"},
+        grid : {'y2':65,left:"10%"},//y2可以控制 X轴跟Zoom控件之间的间隔，避免以为倾斜后造成 label重叠到zoom上
+        legend: {
+            data:['件数','金额']
+        },
         toolbox: {
             show : true,
             feature : {
                 mark : {show: true},
                 dataView : {show: true, readOnly: false},
-                magicType : {show: true, type: ['line', 'bar']},
+                magicType : {show: true, type: ['line', 'bar'],color: ['#dbb121',"#db6a09"]},
                 restore : {show: true},
                 saveAsImage : {show: true}
             }
@@ -963,7 +978,7 @@ var loadGoodsType = function (goodsTypeList) {
             },
             axisLine:{
                 lineStyle:{
-                    color:'#fcfffa',
+                    color:'#ffd435',
                     //width:2,//这里是为了突出显示加上的
                 }
             }
@@ -974,9 +989,27 @@ var loadGoodsType = function (goodsTypeList) {
             axisLabel: {
                 color: "#fcfffa" //刻度线标签颜色
             },
+            splitLine:{
+                show:false
+            },
             axisLine:{
                 lineStyle:{
-                    color:'#fcfffa',
+                    color:'#ffd435',
+                    //width:2,//这里是为了突出显示加上的
+                }
+            }
+        },{
+            'type':'value',
+            'name':'金额',
+            axisLabel: {
+                color: "#fcfffa" //刻度线标签颜色
+            },
+            splitLine:{
+                show:false
+            },
+            axisLine:{
+                lineStyle:{
+                    color:'#ffd435',
                     //width:2,//这里是为了突出显示加上的
                 }
             }
@@ -986,7 +1019,19 @@ var loadGoodsType = function (goodsTypeList) {
                 'name':'件数','type':'bar',
                 'barWidth' : '15',//柱图宽度
                 'data': counts
-            } ]
+            }, {
+                'name':'金额','type':'line',
+                yAxisIndex: 1,
+                'data': sell_price_list,
+                label: {
+                    normal: {
+                        show: false,
+                        position: 'left',
+                        color: "#db6a09"
+                    }
+                }
+            }
+            ]
     };
     var myChart = echarts.init(document.getElementById('goodsType'));
     myChart.setOption(option);
@@ -1028,9 +1073,16 @@ function loadValue (valueList) {
         calculable : true,
         series : [
             {
-                name:'访问来源',
+                name:'价值等级',
                 type:'pie',
                 radius : '55%',
+                label: {
+                    normal: {
+                        position: 'outside',
+                        show : true,
+                        color:'#fcfffa'
+                    }
+                },
                 center: ['50%', '40%'],
                 data :(function() {
                     var res = [];
@@ -1086,16 +1138,16 @@ function  loadsellMode(sellModeList){
         color: ['#dbb121'],
         tooltip: {
             trigger: 'axis',
-            axisPointer: {            // 坐标轴指示器，坐标轴触发有效
+        /*    axisPointer: {            // 坐标轴指示器，坐标轴触发有效
                 type: 'line'        // 默认为直线，可选为：'line' | 'shadow'
-            }
+            }*/
         },
-        grid: {
+  /*      grid: {
             left: '3%',
             right: '4%',
             bottom: '3%',
             containLabel: true
-        },
+        },*/
         toolbox: {
             show : true,
             feature : {
@@ -1127,6 +1179,9 @@ function  loadsellMode(sellModeList){
             {
                 type: 'value',
                 'name':'元',
+                splitLine:{
+                    show:false
+                },
                 axisLabel: {
                     color: "#fcfffa" //刻度线标签颜色
                 },
@@ -1417,7 +1472,8 @@ function  loadsalesRanking(salesRankingList){
                 label: {
                     normal: {
                         show: true,
-                        position: 'right'
+                        color:"#fcfffa",
+                        position: 'inside'
                     }
                 },
                 itemStyle:{
